--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,14 +3,22 @@ name: BACKEND
 services:
   ubuntu_vm:
     build: ./supabase/
+    restart: unless-stopped
     stop_grace_period: 1m
     network_mode: host
     # ports:
     #   - "8000:8000" # example port mapping for API if needed
     #   # supabase services will bind to host ports automatically via docker socket
     volumes:
-      # Use ${PWD} to ensure the container path matches the host path for sibling container volume mapping
+      # ensure container path matches host path for sibling container volume mapping
       - .:${PWD}
       # mount docker socket to allow supabase cli to spawn sibling containers
       - /var/run/docker.sock:/var/run/docker.sock
     working_dir: ${PWD}
+  powersync:
+    build: ./powersync/
+    restart: unless-stopped
+    stop_grace_period: 1m
+    network_mode: host
+    depends_on:
+      - ubuntu_vm
