Fixed networking issues with PowerSync
-> Fixed a bug where Powersync was locked internally to
the docker's host. Modified powersync networking to expose
it's port 8080 to any internal network on the host.

-> Modified docker compose PowerSync to now connect to internal
docker networking and expose itself publicly.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     build: ./powersync/
     restart: unless-stopped
     stop_grace_period: 1m
-    network_mode: host
     depends_on:
       - ubuntu_vm
+    ports:
+      - "8080:8080"  # forward vm to windows
+    extra_hosts:
+      - "host.docker.internal:host-gateway" # access the network mode host on the vm
+    
