--- a/frontend/flutter_counter/pubspec.yaml
+++ b/frontend/flutter_counter/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   logging: ^1.2.0
   sqlite_async: ^0.12.0
   provider: ^6.1.1
+  get_it: ^9.2.0
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.8
+  sizer: ^3.1.3
 
 dev_dependencies:
   flutter_test:
