Implemented the tables dataset and implemented a sample dataset of rows and columns.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ env.local
 !.env.local.template
 !*.env.template
 supabase/signing_keys.json
+backend/supabase/signing_keys.json
+
+# Supabase snippets
+backend/supabase/snippets/
