--- a/frontend/search_cms/pubspec.yaml
+++ b/frontend/search_cms/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  path: ^1.9.1
+  drift: ^2.30.1
 
 dev_dependencies:
   flutter_test:
