--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,7 +29,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     defaults:
       run:
         working-directory: ./frontend
