--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -43,29 +43,36 @@ jobs:
 
       # Set flutter working-directory
       - name: Set flutter workdir
-        run: flutter config --build-dir=./frontend/flutter_counter
+        run: flutter config --build-dir=./
+        working-directory: ./frontend/flutter_counter
 
       # Initialize docker containers
       - name: Docker initialization
-        run: docker compose -f ./backend/docker-compose.yml up --build -d
+        run: docker compose -f ./docker-compose.yml up --build -d
+        working-directory: ./backend/
         
       # Verify testing is added
       - name: Flutter source add
         run: flutter pub add dev:test
+        working-directory: ./frontend/flutter_counter
         
       - name: Install dependencies
         run: flutter pub get
+        working-directory: ./frontend/flutter_counter
 
       #There is an app config template that needs to be setup for users.
       - name: Setup App config file
         run: cp /frontend/flutter_counter/lib/app_config_template.dart /frontend/flutter_counter/lib/app_config.dart .
+        working-directory: ./frontend/flutter_counter
       
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
         run: flutter analyze
+        working-directory: ./frontend/flutter_counter
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
         run: flutter test
+        working-directory: ./frontend/flutter_counter
