Added support for windows to docker build
Our docker compose was reliant on pwd in order to function.
Windows handles pwd differently than linux or mac machines
this causes the volume to not be handled properly.
-> Changed volume and work directory to /app this docker handles
volume management through this instead of relying on PWD mounting.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     #   # supabase services will bind to host ports automatically via docker socket
     volumes:
       # ensure container path matches host path for sibling container volume mapping
-      - .:${PWD}
+      - .:/app
       # mount docker socket to allow supabase cli to spawn sibling containers
       - /var/run/docker.sock:/var/run/docker.sock
-    working_dir: ${PWD}
+    working_dir: /app
   powersync:
     build: ./powersync/
     restart: unless-stopped
