--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -7,9 +7,9 @@ name: flutter
 
 on:
   push:
-    branches: [ "alt-folder-structure" ]
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ "alt-folder-structure" ]
+    branches: [ "develop", "main" ]
   workflow_dispatch:
     inputs:
       logLevel:
