--- a/.github/workflows/flutter-linter.yml
+++ b/.github/workflows/flutter-linter.yml
@@ -44,7 +44,7 @@ jobs:
       # Set flutter working-directory
       - name: Set flutter workdir
         run: flutter config --build-dir=./
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
 
       # Initialize docker containers
       - name: Docker initialization
@@ -54,18 +54,18 @@ jobs:
       # Verify testing is added
       - name: Flutter source add
         run: flutter pub add dev:test
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
         
       - name: Install dependencies
         run: flutter pub get
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
 
       #There is an app config template that needs to be setup for users.
       - name: Setup App config file
         run: cp lib/app_config_template.dart lib/app_config.dart
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
       
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
         run: flutter analyze --fatal-infos
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
