--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -44,7 +44,7 @@ jobs:
       # Set flutter working-directory
       - name: Set flutter workdir
         run: flutter config --build-dir=./
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
 
       # Initialize docker containers
       - name: Docker initialization
@@ -54,20 +54,20 @@ jobs:
       # Verify testing is added
       - name: Flutter source add
         run: flutter pub add dev:test
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
         
       - name: Install dependencies
         run: flutter pub get
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
 
       #There is an app config template that needs to be setup for users.
       - name: Setup App config file
         run: cp lib/app_config_template.dart lib/app_config.dart
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
       
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
         run: flutter test
-        working-directory: ./frontend/flutter_counter
+        working-directory: ./frontend/search_cms
