Add app_config.dart for ease of local development. Must hide this file before releasing to the public

--- a/frontend/search_cms/.gitignore
+++ b/frontend/search_cms/.gitignore
@@ -49,4 +49,5 @@ app.*.map.json
 .tool-versions
 
 # secrets
-app_config.dart
+# For convenience of local development. Uncomment before launch
+# app_config.dart
