fixed & addressed the following: - had the workflows addressed to be waht we specifically need with versioning implemented to prevent future crashesfrom happening - addressed the version on powersync as well

--- a/backend/powersync/Dockerfile
+++ b/backend/powersync/Dockerfile
@@ -1,4 +1,4 @@
-FROM journeyapps/powersync-service:latest
+FROM journeyapps/powersync-service:1.19.0
 
 # Copy configuration
 COPY powersync.yaml /etc/powersync/powersync.yaml
