--- a/.github/workflows/flutter-linter.yml
+++ b/.github/workflows/flutter-linter.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Flutter Lint Check
 
 on:
@@ -32,14 +27,10 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable' # or: 'beta' or 'dev'
+          channel: 'stable'
+          flutter-version-file: pubspec.yaml
 
       # Set flutter working-directory
       - name: Set flutter workdir
