cleaning up the docker & configs

--- a/backend/supabase/Dockerfile
+++ b/backend/supabase/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:24.04
 
-# install necessary dependencies
+# install dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     git \
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     lsb-release \
     && rm -rf /var/lib/apt/lists/*
 
-# install docker CLI (needed for supabase CLI to communicate with docker daemon)
+# install docker CLI
 RUN mkdir -p /etc/apt/keyrings && \
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
     echo \
@@ -21,7 +21,6 @@ RUN mkdir -p /etc/apt/keyrings && \
     rm -rf /var/lib/apt/lists/*
 
 # install supabase CLI
-# using the official install script which typically installs to /usr/local/bin or similar available on PATH
 RUN curl -sL https://github.com/supabase/cli/releases/latest/download/supabase_linux_amd64.tar.gz | tar -xz -C /usr/local/bin/ \
     && chmod +x /usr/local/bin/supabase
 
